Add ui-ux guide

--- a/AlcancesLimitaciones/alcanceslimitaciones.tex
+++ b/AlcancesLimitaciones/alcanceslimitaciones.tex
@@ -1,4 +1,4 @@
-\section{ALCANCES}
+\section{Alcances}
 
 Para el desarrollo del presente proyecto se contempla la implementación de un conjunto de elementos, que podrán ser integrados en cualquier proyecto en el que se use JavaScript y el gestor de paquetes NPM. Debe considerarse que al momento de instalar la presente librería instalará forzosamente React.
  \newline
@@ -37,7 +37,7 @@ También se incluyen otros elementos que no son considerados como básicos pero 
 El conjunto de elementos a desarrollar se tendrán debidamente funcionales y supervisados bajo un marco de pruebas de JavaScript, para esto se estará usando el framework Jest así garantizando la funcionalidad esperada para los usuarios que desean usar la librería, evitando los problemas que pudieran encontrar en los proyectos que lo implementaran. 
 Cada elemento estará debidamente estilizado bajo consideración propia y los conocimientos adquiridos sobre la presente acerca de la experiencia de usuario y el diseño de interfaces.
 
-\section{LIMITACIONES}
+\section{Limitaciones}
 Actualmente se considera que gran parte de la planeación inicial pueda ser llevada al ambiente de producción, aunque actualmente ya se encontraron algunas limitaciones derivado al alto tiempo que se tomará durante el desarrollo y la documentación necesaria para los usuarios.
 Esta limitación no afecta gravemente al desarrollo planeado inicialmente, ya que los elementos básicos se lograran tener listos al final del proyecto y se les asignará una mayor prioridad.
 Los elementos que se planea terminaran afectados son los siguientes. 
