--- a/Bibliografia/bibliografia.tex
+++ b/Bibliografia/bibliografia.tex
@@ -1,3 +1,6 @@
+\renewcommand{\bibname}{}
+\patchcmd{\thebibliography}{\chapter*}{\section*}{}{}
+
 \begin{thebibliography}{100} 
 
 \bibitem{reactOreilly} Banks, A., & Porcello, E. (2017). Learning REACT Functional Web Development with REACT and Redux. O’Reilly.
@@ -50,6 +53,8 @@
 \bibitem{npm} What is npm. (2020). w3schools. https://www.w3schools.com/whatis/whatis_npm.asp
 
 \bibitem{babel} What is Babel? · Babel. (2020). Babel. https://babeljs.io/docs/en/
+
+\bibitem{airbnb} Agrawal, K. (2019, May 4). Airbnb Javascript style guide — Key takeaways - Docon. Medium. https://medium.com/docon/airbnb-javascript-style-guide-key-takeaways-ffd0370c053
 
 
 
