--- a/Problemas/Problemas.tex
+++ b/Problemas/Problemas.tex
@@ -1,8 +1,8 @@
-La inspiración del presente proyecto nace como la solución al conjunto de problemas que se encontraron al estar desarrollando una página web.
+La inspiración del presente proyecto nace como la solución al conjunto de problemas que se encontraron al estar desarrollando una página Web.
 
 \begin{itemize}
 
-   \item \textbf{Personal} \newline Al estar desarrollando una página web es posible pertenecer a un equipo en el cual no te tiene un integrante del área de diseño encargado del diseño de interfaz y diseño de experiencia de usuario, el cual brinda el punto de partida para las personas que se encargan de la maquetación de una web, esto puede ser por que no se cuenta con los recursos monetarios para contratar a una persona o por inasistencia.  
+   \item \textbf{Personal} \newline Al estar desarrollando una página Web es posible pertenecer a un equipo en el cual no te tiene un integrante del área de diseño encargado del diseño de interfaz y diseño de experiencia de usuario, el cual brinda el punto de partida para las personas que se encargan de la maquetación de una Web, esto puede ser por que no se cuenta con los recursos monetarios para contratar a una persona o por inasistencia.  
    \item \textbf{Tiempo}\newline  Existen ocasiones en los desarrollos de software, en los que el tiempo previsto es afectado por resolver otros problemas existentes. En esos casos el tiempo para tener una nueva funcionalidad se reduce o simplemente el tiempo estimado para terminar el trabajo es erróneo. Al tener una librería ganas el tiempo que puedes perder si inicias desde cero. Otras veces se le da más peso a la funcionalidad y se considera un buen diseño y no quieres perder calidad.
    \item \textbf{Estandarización} \newline Cuando desarrollas una pieza de software, esta cuenta con múltiples colaboradores cada uno con distintas maneras de pensar y por consiguiente tu código tiene múltiples estilos de código.   Al usar esta librería se está estandarizando tu trabajo, y cualquier nuevo integrante o cualquier cambio en los roles del equipo puede adaptarse fácilmente.
    \item \textbf{Soporte}\newline  Al consumir los recursos de alguien más, estás garantizando que cualquier error que esto genere no serás el responsable de resolverlo.
