--- a/Procedimiento/ambiente.tex
+++ b/Procedimiento/ambiente.tex
@@ -114,7 +114,7 @@ Después se creó la carpeta de desarrollo son el siguente comando. Se llamó de
      \caption[Crear archivo vacío]{Crear archivo vacío}
          \end{figure}
     \newline
-    Necesitamos agregar ciertos cargadores de WEPACK para poder usar SASS y CSS, con el siguiente comando.
+    Necesitamos agregar ciertos cargadores de Webpack para poder usar SASS y CSS, con el siguiente comando.
     \newline
     \newline
      \begin{figure}[H]
