--- a/Procedimiento/publicacion.tex
+++ b/Procedimiento/publicacion.tex
@@ -1,4 +1,4 @@
-Finalmente una vez tenemos todos los elementos completamente desarrollados y terminados debemos proceder a publicar nuestra librería para que esta sea de uso libre para toda la comunidad de desarrolladores de software web que implementan Node.
+Finalmente una vez tenemos todos los elementos completamente desarrollados y terminados debemos proceder a publicar nuestra librería para que esta sea de uso libre para toda la comunidad de desarrolladores de software Web que implementan Node.
 
 Debemos configurar el nombre de nuestro paquete que será con el que las personas pueden encontrarlo, esta librería se llama "crown components", este nombre se especifica en el archivo package.json en el directorio raíz de nuestro proyecto en la llave “name”.
 
