--- a/CaracterizacionAreas/CaracterizacionAreas.tex
+++ b/CaracterizacionAreas/CaracterizacionAreas.tex
@@ -1,4 +1,4 @@
-El presente trabajo fue desarrollado para el uso libre y futura implementación en proyectos de software. Específicamente en el ambiente de la programación web, para su utilización en áreas en las cuales se usa como base la librería React, ya que nuestro trabajo funciona sobre React.
+El presente trabajo fue desarrollado para el uso libre y futura implementación en proyectos de software. Específicamente en el ambiente de la programación Web, para su utilización en áreas en las cuales se usa como base la librería React, ya que nuestro trabajo funciona sobre React.
  \newline
   \newline
 Esta librería se encuentra publicada en el gestor de paquetes de JavaScript llamado NPM. 
