--- a/Objetivos/objetivosEspecificos.tex
+++ b/Objetivos/objetivosEspecificos.tex
@@ -1,2 +1,2 @@
-Desarrollar una librería para el desarrollo front-End de páginas web, para el gestor de paquetes de JavaScript \cite{javascript} llamado npm, usando el framework React que nos permite la creación de componentes reutilizables. Para el correcto funcionamiento de la librería se implementará web-pack que nos permite empaquetar y exportar todos los módulos y dependencia que incluye nuestra librería en un solo archivo para la correcta y ágil implementación. Aunado a esto se utilizará Babel \cite{babel} que es un convertidor de código JavaScript a versiones anteriores, lo que nos permitirá una gran cantidad de compatibilidad con navegadores antiguos. Para unificar nuestra sintaxis se usará ESLint el cual nos permite definir una guía de estilos para la librería, sobre esto se usará una guía de estilos ya definida y probada, la de Airbnb. 
+Desarrollar una librería para el desarrollo Front-End de páginas Web, para el gestor de paquetes de JavaScript \cite{javascript} llamado NPM, usando el framework React que nos permite la creación de componentes reutilizables. Para el correcto funcionamiento de la librería se implementará Web-pack que nos permite empaquetar y exportar todos los módulos y dependencia que incluye nuestra librería en un solo archivo para la correcta y ágil implementación. Aunado a esto se utilizará Babel \cite{babel} que es un convertidor de código JavaScript a versiones anteriores, lo que nos permitirá una gran cantidad de compatibilidad con navegadores antiguos. Para unificar nuestra sintaxis se usará ESLint el cual nos permite definir una guía de estilos para la librería, sobre esto se usará una guía de estilos ya definida y probada, la de Airbnb. 
 \newpage
