--- a/Procedimiento/desarrollo.tex
+++ b/Procedimiento/desarrollo.tex
@@ -95,9 +95,9 @@ A continuación se muestra un fragmento del código que permite agregar la confi
     \end{figure}
 \newline
 \newline
-En la primera parte podemos ver una lista de la configuración dada,  después definimos un objeto llamado styles el cual agrega dentro de un switch, el css para que sea mostrado de acuerdo al tipo ( type ) de botón que se quiere. Finalmente regresa html, el cual es nuestro botón ya configurado.
-Se puede observar que dentro de la etiqueta <a>  tenemos “className” esto agrega la clase en la cual definiremos el css.
-Dentro del archivo css agregamos el diseño base de nuestro botón, aquí tenemos el  tamaño de la letra, tamaño del botón, grosor de letra y otras cosas más.
+En la primera parte podemos ver una lista de la configuración dada,  después definimos un objeto llamado styles el cual agrega dentro de un switch, el CSS para que sea mostrado de acuerdo al tipo ( type ) de botón que se quiere. Finalmente regresa HTML, el cual es nuestro botón ya configurado.
+Se puede observar que dentro de la etiqueta <a>  tenemos “className” esto agrega la clase en la cual definiremos el CSS.
+Dentro del archivo CSS agregamos el diseño base de nuestro botón, aquí tenemos el  tamaño de la letra, tamaño del botón, grosor de letra y otras cosas más.
 \newline
 \newline
 \begin{figure}[H]
@@ -110,7 +110,7 @@ Dentro del archivo css agregamos el diseño base de nuestro botón, aquí tenemo
 
 
 \subsection{Elemento Label}
-Ahora vamos a agregar el elemento Label que es un texto con el cual tenemos un formato estandarizado para tener un mejor diseño. En este elemento podemos dar parámetros de configuración como el tamaño, grosor y color que son los elementos básicos que se usan cuando estamos formateando con css nuestro texto. 
+Ahora vamos a agregar el elemento Label que es un texto con el cual tenemos un formato estandarizado para tener un mejor diseño. En este elemento podemos dar parámetros de configuración como el tamaño, grosor y color que son los elementos básicos que se usan cuando estamos formateando con CSS nuestro texto. 
 A continuación se presenta una lista de los parámetros y  su significado.
 \newline
 \begin{center}
@@ -136,7 +136,7 @@ Los parámetros obligatorios para su funcionamiento son:
 \end{itemize}
 \newline
 \newline
-Para el funcionamiento de la etiqueta de texto se tiene un componente de React en el cual se crea un objeto de JavaScript, se agrega la configuración del color, tamaño de texto y grosor. Finalmente se crea una etiqueta de html a la cual le damos nuestro objeto para que aplique el estilo y le ponemos el texto que se quiere mostrar.
+Para el funcionamiento de la etiqueta de texto se tiene un componente de React en el cual se crea un objeto de JavaScript, se agrega la configuración del color, tamaño de texto y grosor. Finalmente se crea una etiqueta de HTML a la cual le damos nuestro objeto para que aplique el estilo y le ponemos el texto que se quiere mostrar.
 \newline
 \newline
 \begin{figure}[H]
@@ -164,11 +164,11 @@ onChange & Es la función que va a hacer invocada cuando se escriba.     & Funci
  \hline
 nameState & Es el nombre con el cual se identifica en el estado.    & Cadena de texto.	& input \\[3.5ex] 
  \hline
- type   & Es la manera en como será interpretado por Input Text, estos son los que existen por defecto en html. Password etc.&  Cadena de texto.	& text \\[2.5ex] 
+ type   & Es la manera en como será interpretado por Input Text, estos son los que existen por defecto en HTML. Password etc.&  Cadena de texto.	& text \\[2.5ex] 
  \hline
  title  & Si se pone como “true” este agregara un Label antes del Input Text y no lo pondrá dentro.&  Booleano.	& false \\[2.5ex] 
  \hline
- extraStyle   & Si se desea agregar más estilos se puede poner el nombre de la clase css para poder ser manipulado.&  Cadena de texto. 	& Cadena vacía. \\[2.5ex] 
+ extraStyle   & Si se desea agregar más estilos se puede poner el nombre de la clase CSS para poder ser manipulado.&  Cadena de texto. 	& Cadena vacía. \\[2.5ex] 
  \hline
 \end{tabular}
 \end{center}
@@ -183,7 +183,7 @@ Los parámetros obligatorios para su funcionamiento son:
 \newline
 \newline
 La primera consideración que se tiene, es saber si se necesita tener un “Título” en nuestro Input Text, y si es así, se agrega un elemento Label antes,  para ayudarnos a mostrar cual es el significado de nuestro label. Esto por ejemplo, si se quiere poner una entrada de texto para solicitar el correo electronico de cierta persona, esto puede estar dentro de el Input Texto denominado placeholder o afuera denominado title, por defecto title está desactivado y se activa enviando “true”.
-Cuando se escribe sobre el campo de texto, este llama a la función “onChange” que recibe, y regresa el nombre de como está identificado en el estado de REACT y el valor que contiene el campo de texto.
+Cuando se escribe sobre el campo de texto, este llama a la función “onChange” que recibe, y regresa el nombre de como está identificado en el estado de React y el valor que contiene el campo de texto.
 
 Los demás parámetros de los estilos también son agregados en el siguiente código.
 \newline
@@ -277,7 +277,7 @@ En el siguiente código se muestra el código fuente del elemento, el cual cuand
     
     
 \subsection{Elemento Switch}
-Este elemento es recomendable cuando se desea iterar entre dos estados, estos son activo o inactivo. Puede ser usado, por ejemplo, cuando en una web se desea saber si el usuario quiere recibir las últimas noticias generadas.
+Este elemento es recomendable cuando se desea iterar entre dos estados, estos son activo o inactivo. Puede ser usado, por ejemplo, cuando en una Web se desea saber si el usuario quiere recibir las últimas noticias generadas.
 Los parámetros que el elemento necesita para su funcionamiento son los siguientes.
 \newline
     \newline
@@ -347,7 +347,7 @@ Los parámetros obligatorios para su funcionamiento son:
 
 
 \subsection{Elemento CheckBox}
-Este elemento es recomendable cuando se desea tener una casilla de verificación, puede ser seleccionado o sin seleccionar. Puede ser usado, por ejemplo, cuando en una web se debe forzar a aceptar los términos y condiciones para poder realizar un registro.
+Este elemento es recomendable cuando se desea tener una casilla de verificación, puede ser seleccionado o sin seleccionar. Puede ser usado, por ejemplo, cuando en una Web se debe forzar a aceptar los términos y condiciones para poder realizar un registro.
 Los parámetros que el elemento necesita para su funcionamiento son los siguientes.
 \newline
     \newline
@@ -455,7 +455,7 @@ Los parámetros obligatorios para su funcionamiento son:
 
 
     \subsection{Elemento Card}
-    Este elemento se usa cuando queremos mostrar tarjetas de información, las cuales contienen imagen, texto y botones. Por ejemplo si se desea desarrollar una web para un restaurante podemos implementar este elemento el cual nos facilitará la tarea, porque podemos darle la imagen del restaurante o algún platillo que se quisiera mostrar, también le podemos dar la descripción, título y un botón que realizará una acción con cada tarjeta.
+    Este elemento se usa cuando queremos mostrar tarjetas de información, las cuales contienen imagen, texto y botones. Por ejemplo si se desea desarrollar una Web para un restaurante podemos implementar este elemento el cual nos facilitará la tarea, porque podemos darle la imagen del restaurante o algún platillo que se quisiera mostrar, también le podemos dar la descripción, título y un botón que realizará una acción con cada tarjeta.
 Los parámetros que el elemento necesita para su funcionamiento son los siguientes.
 \newline
     \newline
