--- a/Procedimiento/procedimiento.tex
+++ b/Procedimiento/procedimiento.tex
@@ -1,4 +1,4 @@
-        El objetivo de desarrollo de la presente librería se basa en el siguiente principio, “ cuando un elemento sea actualizado, sea un botón, cuadro de estado, entrada de texto, etc. el componente regresará un objeto el cual tendrá el nombre del elemento y el nuevo valor para que este sea actualizado en el state de react ”.  Con esto deseamos generar el  flujo de la Figura 8.1.
+        El objetivo de desarrollo de la presente librería se basa en el siguiente principio, “ cuando un elemento sea actualizado, sea un botón, cuadro de estado, entrada de texto, etc. el componente regresará un objeto el cual tendrá el nombre del elemento y el nuevo valor para que este sea actualizado en el state de React ”.  Con esto deseamos generar el  flujo de la Figura 8.1.
         
                \begin{figure}[H]
            \includegraphics[width=1\textwidth]{./Imagenes/carbon-8.png}
