--- a/Bibliografia/bibliografia.tex
+++ b/Bibliografia/bibliografia.tex
@@ -3,9 +3,13 @@
 
 \begin{thebibliography}{100} 
 
+\bibitem{airbnb} Agrawal, K. (2019, May 4). Airbnb Javascript style guide — Key takeaways - Docon. Medium. https://medium.com/docon/airbnb-javascript-style-guide-key-takeaways-ffd0370c053
+
 \bibitem{reactOreilly} Banks, A., & Porcello, E. (2017). Learning REACT Functional Web Development with REACT and Redux. O’Reilly.
 
 \bibitem{scss} Coyier, C. (2013). SASS FOR WEB DESIGNERS. https://abookapart.com/products/sass-for-web-designers
+
+\bibitem{axios}Cruz, R. (2019, November 1). Using Axios For HTTP Requests - Rafael Cruz. Medium. https://medium.com/@ralph1786/using-axios-for-http-requests-be9abb80795b
 
 \bibitem{html} Danny Goodman. (1998). Dynamic HTML The Definitive Reference. 101 Morris Street, Sebastopol, CA 95472: O'REILLY.
 
@@ -53,8 +57,6 @@
 \bibitem{npm} What is npm. (2020). w3schools. https://www.w3schools.com/whatis/whatis_npm.asp
 
 \bibitem{babel} What is Babel? · Babel. (2020). Babel. https://babeljs.io/docs/en/
-
-\bibitem{airbnb} Agrawal, K. (2019, May 4). Airbnb Javascript style guide — Key takeaways - Docon. Medium. https://medium.com/docon/airbnb-javascript-style-guide-key-takeaways-ffd0370c053
 
 
 
