--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -94,6 +94,9 @@
 			\section {Publicación de la librería en NPM }
 				\input{./Procedimiento/publicacion.tex}
 			
+			\section {Diferencia entre el uso nativo de React y esta librería}
+				\input {./Procedimiento/diferencia.tex}
+			
 		
 		\chapter {Pruebas y Resultados}
 			\input{./Resultados/Resultados.tex}
