Split Objetivos Especificos

--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -40,6 +40,8 @@
 	\pagenumbering{Roman}
 	\includepdf[pages=-]{portada.pdf}
 	
+	\citep{einstein} 
+	
 	\chapter* {Copia del Oficio de Impresión definitiva División de Estudios }
 	
 	\chapter* {Copia del Oficio de Impresión definitiva Sinodales}
@@ -108,5 +110,7 @@
 			\input{./Bibliografia/bibliografia}
 			
 		\chapter {Anexos}
+		
+\bibliography{library}
 
 \end{document}
