--- a/Objetivos/objetivosEspecificos.tex
+++ b/Objetivos/objetivosEspecificos.tex
@@ -1,2 +1,9 @@
-Desarrollar una librería para el desarrollo Front-End de páginas Web, para el gestor de paquetes de JavaScript \cite{javascript} llamado NPM, usando el framework React que nos permite la creación de componentes reutilizables. Para el correcto funcionamiento de la librería se implementará Web-pack que nos permite empaquetar y exportar todos los módulos y dependencia que incluye nuestra librería en un solo archivo para la correcta y ágil implementación. Aunado a esto se utilizará Babel \cite{babel} que es un convertidor de código JavaScript a versiones anteriores, lo que nos permitirá una gran cantidad de compatibilidad con navegadores antiguos. Para unificar nuestra sintaxis se usará ESLint el cual nos permite definir una guía de estilos para la librería, sobre esto se usará una guía de estilos ya definida y probada, la de Airbnb. 
+  \begin{itemize}
+ \item Desarrollar una librería para el desarrollo Front-End de páginas Web.
+ \item Publicar la biblioteca para su uso con el gestor de paquetes de JavaScript \cite{javascript} llamado NPM.
+ \item Usar el marco de referencia React que nos permite la creación de componentes reutilizables.
+ \item Implementar Web-pack para garantizar el funcionamiento de la biblioteca ya que nos permite empaquetar y exportar todos los módulos y dependencias que incluye nuestra librería en un solo archivo para la correcta y ágil implementación. 
+ \item Aunado a esto se utilizará Babel \cite{babel} que es un convertidor de código JavaScript a versiones anteriores, lo que nos permitirá una gran cantidad de compatibilidad con navegadores antiguos. 
+ \item Para unificar nuestra sintaxis se usará ESLint el cual nos permite definir una guía de estilos para la librería, sobre esto se usará una guía de estilos ya definida y probada, la de Airbnb. 
+   \end{itemize}
 \newpage
